@@ -2,7 +2,7 @@ Package: patientProfilesVis
 Type: Package
 Title: Visualization of Patient Profiles
 Version: 2.0.0
-Date: 2021-06-09
+Date: 2021-06-11
 Authors@R: person(given = "Laure", family = "Cougnaud", role = c("aut", "cre"),
   email = "laure.cougnaud@openanalytics.eu")
 Description: Creation of patient profile visualizations for
