@@ -5,7 +5,6 @@ export(createSubjectProfileReport)
 export(filterData)
 export(getColorPalettePatientProfile)
 export(getNLinesSubjectProfile)
-export(getPathTemplate)
 export(getShapePalettePatientProfile)
 export(getTimeTrans)
 export(subjectProfileCombine)
