@@ -8,6 +8,10 @@
 should NA elements be retained in the palette in case
 \code{x} is specified?}
 }
+\value{
+No return value, used for the documentation of 
+the palette functions of the package.
+}
 \description{
 Parameters for all patient profiles visualization palette functions.
 }
