@@ -3,6 +3,7 @@
     o fix in case bookmarkVar is a factor
     o new options to set color/shape palette globally
     o figure dir not created if exportFigures is FALSE on Windows
+    o no export of getPathTemplate
 1.5.0
     o add unit tests
     o no export of subjectProfileTheme
